<resources>
    <string name="app_name" translatable="false">Filmoteca</string>
    <string name="using_mode">Using mode:</string>
    <string name="created_by">Created by Sergio Ariza Amat</string>
    <string name="about_image_description">Imagen usuario</string>
    <string name="go_to_website">Go to website</string>
    <string name="get_support">Get support</string>
    <string name="back">Back</string>
    <string name="not_implemented" translatable="false">Not implemented yet</string>
    <string name="no_app_available">No application available to perform this action</string>
    <string name="film_a">View film A</string>
    <string name="film_b">View film B</string>
    <string name="about">About</string>
    <string name="film_data">Film data</string>
    <string name="related_film">View Related film</string>
    <string name="edit_film">Edit film</string>
    <string name="edit">Editing film ...</string>
    <string name="back_to_main">Back to main</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="film_a_title">Film A</string>
    <string name="film_b_title">Film B</string>
    <string name="related_film_title">Related film</string>
    <string name="film_edited">%1$s (edited)</string>




</resources>
