<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FilmDataActivity">

    <include
        android:id="@+id/appBar"
        layout="@layout/app_bar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/FilmData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/film_data"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btnRelatedfilm"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <Button
            android:id="@+id/btnRelatedfilm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/related_film"
            app:layout_constraintTop_toBottomOf="@id/FilmData"
            app:layout_constraintBottom_toTopOf="@id/btnEditfilm"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/btnEditfilm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_film"
            app:layout_constraintTop_toBottomOf="@id/btnRelatedfilm"
            app:layout_constraintBottom_toTopOf="@id/btnBacktomain"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/btnBacktomain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_to_main"
            app:layout_constraintTop_toBottomOf="@id/btnEditfilm"
            app:layout_constraintBottom_toTopOf="@id/mode"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
